# Datamorphx

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject_backup.toml  requirements.txt  run_all_tests.bat  setup.cfg
.github/workflows/: ci.yml
app/: fastapi_app.py  streamlit_app.py
cli/: datamorphx_cli.py
datamorphx/: converter.py  exceptions.py  utils.py  validators.py
tests/: test_converter.py
tests/sample_data/: sample.csv  sample_out.json
