[metadata]
name = datamorphx-gunjesh
version = 1.0.0
description = High-performance data format converter (CSV, JSON, Excel, Feather, Parquet)
author = GunjeshGiri
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GunjeshGiri/Datamorphx

[options]
packages = find:
python_requires = >=3.11
include_package_data = True

install_requires =
    pandas
    pyarrow
    orjson
    openpyxl
    streamlit
    fastapi
    uvicorn[standard]
    python-multipart
    pytest
    python-dotenv
    numpy

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    datamorphx = cli.datamorphx_cli:main
